added to more products

--- a/index.html
+++ b/index.html
@@ -51,6 +51,42 @@
                 <p class="p-price">From ₹3,999</p>
                 <p class="p-brand">HP, Canon & more</p>
             </div>
+            <div class="item-card">
+                <img src="https://rukminim1.flixcart.com/image/200/200/kjkbv680/mobile/s/j/x/-original-imafw7y5phv6zg6g.jpeg" alt="Smartphone">
+                <p class="p-name">Smartphones</p>
+                <p class="p-price">From ₹6,499</p>
+                <p class="p-brand">Mi, Realme & more</p>
+            </div>
+            <div class="item-card">
+                <img src="https://rukminim1.flixcart.com/image/200/200/l1j2cnk0/headphone/s/g/x/boAt-immortal-100-original-imagcm6gq3g6hhyz.jpeg" alt="Headphones">
+                <p class="p-name">Wireless Headphones</p>
+                <p class="p-price">From ₹999</p>
+                <p class="p-brand">boAt, JBL & more</p>
+            </div>
+            <div class="item-card">
+                <img src="https://rukminim1.flixcart.com/image/200/200/k8fi4cw0/camera/e/g/j/dslr-canon-original-imafmz7gz7z6zn2g.jpeg" alt="Camera">
+                <p class="p-name">Digital Cameras</p>
+                <p class="p-price">From ₹12,499</p>
+                <p class="p-brand">Canon, Nikon & more</p>
+            </div>
+            <div class="item-card">
+                <img src="https://rukminim1.flixcart.com/image/200/200/kz8x3bk0/smartwatch/1/q/u/-original-imagb7yfzqkqv9tq.jpeg" alt="Smartwatch">
+                <p class="p-name">Smartwatches</p>
+                <p class="p-price">From ₹1,299</p>
+                <p class="p-brand">Noise, Fire-Boltt & more</p>
+            </div>
+            <div class="item-card">
+                <img src="https://rukminim1.flixcart.com/image/200/200/kqidx8w0/refrigerator/g/f/4/nx-2154ch-original-imag4f2gme97xzyv.jpeg" alt="Refrigerator">
+                <p class="p-name">Refrigerators</p>
+                <p class="p-price">From ₹9,999</p>
+                <p class="p-brand">LG, Samsung & more</p>
+            </div>
+            <div class="item-card">
+                <img src="https://rukminim1.flixcart.com/image/200/200/k0qg6vk0/laptop/v/2/w/lenovo-ideapad-original-imafk9g9h5k5y8uy.jpeg" alt="Laptop">
+                <p class="p-name">Laptops</p>
+                <p class="p-price">From ₹24,999</p>
+                <p class="p-brand">Lenovo, HP & more</p>
+            </div>
         </div>
     </main>
 
