--- a/index.html
+++ b/index.html
@@ -38,6 +38,14 @@
             <h2>Best of Electronics</h2>
             <button class="view-all">VIEW ALL</button>
         </div>
+        <div class="main-content">
+    <div class="section-header">
+        <h2>Deals of the Day</h2>
+        <div class="cart-status">Cart: <span id="cart-count">0</span> items</div>
+    </div>
+    <div class="product-grid" id="product-container">
+        </div>
+    </div>
         <div class="product-grid">
             <div class="item-card">
                 <img src="https://rukminim1.flixcart.com/image/200/200/xif0q/monitor/s/g/u/-original-imagz6zgxzst896g.jpeg" alt="Monitor">
