--- a/index.html
+++ b/index.html
@@ -25,6 +25,18 @@
         </div>
     </nav>
 
+    <div class="banner-container">
+        <div class="dhamaka-banner">
+            <div class="firework"></div>
+            <div class="banner-text">
+                <h1 class="hindi-title">नया साल <span>धमाका ऑफर</span></h1>
+                <p>Up to 80% off on all categories!</p>
+                <div class="lights-effect"></div>
+            </div>
+            <div class="firework right"></div>
+        </div>
+    </div>
+
     <div class="categories">
         <div class="cat-item"><img src="https://rukminim1.flixcart.com/flap/128/128/image/22fddf3c7da4c4f4.png"> <p>Mobile</p></div>
         <div class="cat-item"><img src="https://rukminim1.flixcart.com/flap/128/128/image/69c6589653afdb9a.png"> <p>Electronics</p></div>
